<resources>
    <!-- app -->
    <string name="app_name" translatable="false">Mapxus Map Sample</string>
    <string name="mapxus_map_sdk" translatable="false">Mapxus Map SDK</string>
    <string name="examples" translatable="false">Android examples</string>

    <!-- UI Strings -->
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <!--Default style names-->
    <string name="style">Style</string>
    <string name="menu_map_style_mocha_mousse">Mocha Mousse</string>
    <string name="menu_map_style_city_walk">City Walk</string>
    <string name="menu_map_style_pear_sorbet">Pear Sorbet</string>
    <string name="menu_map_style_rose_tea">Rose Tea</string>
    <string name="menu_map_style_mapxus">Mapxus</string>
    <string name="menu_map_style_mapxus_section">Mapxus Style with Section</string>
    <string name="menu_map_style_mapxus_section_by_color">Section Display by Color Styler</string>
    <string name="menu_map_style_mapxus_section_by_category">Section Display by Category Style</string>
    <string name="menu_map_style_mapxus_v2">Mapxus_V2</string>
    <string name="cancel">Cancel</string>

    <!--floor switch mode-->
    <string name="menu_floor_switch_scope_venue">Venue Switch Scope</string>
    <string name="menu_floor_switch_scope_building">Global Switch Scope</string>

    <!--Fragment below textview in support fragment activity-->
    <string name="fragment_in_card_below" translatable="false">Map fragment container in card below</string>

    <!--activity_building_and_floor_change-->
    <string name="building_name_tips" translatable="false">BuildingName:</string>
    <string name="floor_tips" translatable="false">Floor:</string>

    <string name="no_result">Not found any data</string>

    <string name="location_dialog_message" translatable="false">Positioning</string>
    <string name="location_dialog_title">Please wait a moment</string>

    <!-- nav drawer categories -->
    <string name="map_creation">Map Creation</string>
    <string name="map_interaction">Map Interaction</string>
    <string name="map_editing">Map Editing</string>
    <string name="indoor_positioning">Indoor Positioning</string>
    <string name="search_service">Search Service</string>
    <string name="integration_cases">Integration Cases</string>

    <string name="follow_me_none" translatable="false">NONE</string>
    <string name="follow_me_follow_user" translatable="false">FOLLOW</string>
    <string name="follow_me_follow_user_and_heading" translatable="false">HEADING</string>
    <string name="update_dialog_title" translatable="false">Update Available</string>
    <string name="ok" translatable="false">OK</string>

    <string name="floor" translatable="false">floor</string>
    <string name="floor_id" translatable="false">floorId \n(Support multiple floorids input separated by “,”)</string>
    <string name="shared_floor_id" translatable="false">sharedFloorId \n(Support multiple sharedfloor ids input separated by “,”)</string>
    <string name="zoom_insets" translatable="false">zoomInsets</string>
    <string name="right" translatable="false">right</string>
    <string name="left" translatable="false">left</string>
    <string name="num_0" translatable="false">0</string>
    <string name="bottom" translatable="false">bottom</string>
    <string name="top" translatable="false">Top</string>
    <string name="create" translatable="false">Create</string>
    <string name="poi_id" translatable="false">poiId</string>
    <string name="zoom_level" translatable="false">zoomLevel</string>
    <string name="zoom_level_value" translatable="false">20</string>
    <string name="is_always_hidden" translatable="false">isAlwaysHidden</string>
    <string name="position" translatable="false">Position</string>
    <string name="box_length" translatable="false">Box Length</string>
    <string name="language" translatable="false">Language</string>
    <string name="building_outline_style" translatable="false">Active Building Outline</string>
    <string name="floor_switch_scope" translatable="false">Switch Floor Scope</string>
    <string name="is_outdoor_hidden" translatable="false">isOutdoorHidden</string>
    <string name="default_text" translatable="false">default</string>
    <string name="en" translatable="false">en</string>
    <string name="zh_hant" translatable="false">zh-Hant</string>
    <string name="zh_hans" translatable="false">zh-Hans</string>
    <string name="ja" translatable="false">ja</string>
    <string name="ko" translatable="false">ko</string>
    <string name="gesture_switch" translatable="false">gesture switch</string>
    <string name="auto_switch" translatable="false">auto switch</string>
    <string name="please_long_press_or_click_on_the_map" translatable="false">Please long press or click on the map.</string>
    <string name="params" translatable="false">Params</string>
    <string name="zoom_mode" translatable="false">zoomMode</string>
    <string name="lat" translatable="false">lat :</string>
    <string name="lon" translatable="false">lon :</string>
    <string name="accuracy" translatable="false">accuracy :</string>
    <string name="compass" translatable="false">compass :</string>
    <string name="time_stamp" translatable="false">timestamp :</string>
    <string name="keywords" translatable="false">keywords</string>
    <string name="visible_floor" translatable="false">Maximum number of visible floors</string>
    <string name="building_outline_opacity" translatable="false">Opacity (from 0 to 1)</string>
    <string name="building_outline_color" translatable="false">color(Hex)</string>
    <string name="building_outline_line_width" translatable="false">line width</string>
    <string name="offset" translatable="false">offset</string>
    <string name="default_offset" translatable="false">10</string>
    <string name="page" translatable="false">page</string>
    <string name="default_page" translatable="false">1</string>
    <string name="bbox" translatable="false">bbox</string>
    <string name="min_latitude" translatable="false">min_latitude</string>
    <string name="min_longitude" translatable="false">min_longitude</string>
    <string name="max_latitude" translatable="false">max_latitude</string>
    <string name="max_longitude" translatable="false">max_longitude</string>
    <string name="center" translatable="false">center</string>
    <string name="latitude" translatable="false">latitude</string>
    <string name="longitude" translatable="false">longitude</string>
    <string name="distance" translatable="false">distance</string>
    <string name="default_distance" translatable="false">5</string>
    <string name="default_distance_30" translatable="false">30</string>
    <string name="add_id" translatable="false">Add ID</string>
    <string name="search_in_venue" translatable="false">Search In Venue</string>
    <string name="search_in_building" translatable="false">Search In Building</string>
    <string name="search_on_floor" translatable="false">Search On Floor</string>
    <string name="close" translatable="false">Close</string>
    <string name="category" translatable="false">category</string>
    <string name="exclude_category" translatable="false">exclude category \n(Separate each category with “,”)</string>
    <string name="building_id" translatable="false">buildingId</string>
    <string name="venue_id" translatable="false">venueId</string>
    <string name="search" translatable="false">Search</string>
    <string name="location" translatable="false">location</string>
    <string name="ordinal" translatable="false">ordinal</string>
    <string name="distance_search_type" translatable="false">distanceSearchType</string>
    <string name="point" translatable="false">Point</string>
    <string name="gate" translatable="false">Gate</string>
    <string name="polygon" translatable="false">Polygon</string>
    <string name="go" translatable="false">Go</string>
    <string name="start" translatable="false">Start</string>
    <string name="stop" translatable="false">Stop</string>
    <string name="end" translatable="false">End</string>
    <string name="first_waypoint" translatable="false">First Waypoint</string>
    <string name="second_waypoint" translatable="false">Second Waypoint</string>
    <string name="third_waypoint" translatable="false">Third Waypoint</string>

    <string name="tap_screen_for_start" translatable="false">Tap screen for Start</string>
    <string name="tap_screen_for_end" translatable="false">Tap screen for End</string>
    <string name="tap_screen_for" translatable="false">Tap screen for %s</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="located_inside" translatable="false">Located Inside</string>
    <string name="delete" translatable="false">delete</string>
    <string name="sort" translatable="false">sort</string>
    <string name="order_by" translatable="false">order by</string>
    <string name="meter_distance" translatable="false">meterDistance</string>
    <string name="actual_distance" translatable="false">ActualDistance</string>
    <string name="absoulute_distance" translatable="false">AbsouluteDistance</string>
    <string name="order_by_default_name" translatable="false">DefaultName</string>
    <string name="order_by_none" translatable="false">None</string>
    <string name="download" translatable="false">Download</string>
    <string name="warning" translatable="false">Warning</string>
    <string name="search_first" translatable="false">Please search the route first</string>
    <string name="reach_toast_text" translatable="false">You have arrived . </string>
    <string name="foot" translatable="false">foot</string>
    <string name="wheelchair" translatable="false">wheelchair</string>
    <string name="emergency" translatable="false">emergency</string>
    <string name="is_show_mask_layer">show mask layer</string>

</resources>