<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/textview_shape_white_top_radius"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".examples.mapcreation.MapxusMapInitWithBuildingParamsActivity">

    <TextView
        android:id="@+id/tv_keywords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keywords"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_keywords"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@android:drawable/editbox_background_normal"
        android:hint="@null"
        android:inputType="text"
        android:padding="8dp"
        android:singleLine="true"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_offset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/offset"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_offset"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@android:drawable/editbox_background_normal"
        android:hint="@null"
        android:inputType="number"
        android:padding="8dp"
        android:singleLine="true"
        android:text="@string/default_offset"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/page"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_page"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@android:drawable/editbox_background_normal"
        android:hint="@null"
        android:inputType="number"
        android:padding="8dp"
        android:singleLine="true"
        android:text="@string/default_page"
        android:textStyle="bold" />

    <Button
        android:id="@+id/create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_shape_blue"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold" />

</LinearLayout>