<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/textview_shape_white_top_radius">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/tv_keywords"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keywords"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_keywords"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:background="@android:drawable/editbox_background_normal"
            android:hint="@null"
            android:inputType="text"
            android:padding="8dp"
            android:singleLine="true"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/category"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_category"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:background="@android:drawable/editbox_background_normal"
            android:hint="@null"
            android:inputType="text"
            android:padding="8dp"
            android:singleLine="true"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/sort"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_soft_mode"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_shape_blue"
            android:text="@string/actual_distance"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:text="AbsouluteDistance" />

        <TextView
            android:id="@+id/tv_tips_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/building_id"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_id"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:background="@android:drawable/editbox_background_normal"
            android:hint="@null"
            android:inputType="text"
            android:padding="8dp"
            android:singleLine="true"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_ordinal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/ordinal"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_ordinal"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:background="@android:drawable/editbox_background_normal"
            android:hint="@null"
            android:inputType="text"
            android:padding="8dp"
            android:singleLine="true"
            android:text="@string/num_0"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/center"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_lat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/latitude"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_lat"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1.5"
                android:autofillHints=""
                android:background="@android:drawable/editbox_background_normal"
                android:hint="@null"
                android:inputType="number"
                android:padding="8dp"
                android:text="@string/default_lat"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_lon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/longitude"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_lon"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1.5"
                android:autofillHints=""
                android:background="@android:drawable/editbox_background_normal"
                android:hint="@null"
                android:inputType="number"
                android:padding="8dp"
                android:text="@string/default_lon"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/meter_distance"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_distance"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:background="@android:drawable/editbox_background_normal"
            android:hint="@null"
            android:inputType="text"
            android:padding="8dp"
            android:singleLine="true"
            android:text="@string/default_meter_distance"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_offset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/offset"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_offset"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:background="@android:drawable/editbox_background_normal"
            android:hint="@null"
            android:inputType="text"
            android:padding="8dp"
            android:singleLine="true"
            android:text="@string/default_offset"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/page"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_page"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:background="@android:drawable/editbox_background_normal"
            android:hint="@null"
            android:inputType="text"
            android:padding="8dp"
            android:singleLine="true"
            android:text="@string/default_page"
            android:textStyle="bold" />


        <Button
            android:id="@+id/create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_shape_blue"
            android:text="@string/create"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>